<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">filtermusic</string>

    <string name="error_unable_to_retrieve">Looks like we can\'t get the list of radios.</string>
    <string name="tap_to_retry">Tap to retry</string>
    <string name="no_internet">No Internet connection available</string>

    <!--categories tab-->
    <string name="categories_tab">Categories</string>
    <string name="no_stations">%d Stations</string>
    <!--favorites tab-->
    <string name="favorites_tab">Favorites</string>
    <string name="favorites_suggestion">Star your favorite radios to see them here</string>

    <!--recently played tab-->
    <string name="recent_tab">Played</string>
    <string name="recent_radios">Your recently played radios will be visible here</string>
    <string name="last_played">Last played %s</string>

    <!--about tab-->
    <string name="about_tab">About</string>
    <string name="visit_us">Visit us at:</string>
    <string name="url">filtermusic.net</string>
    <string name="contact">Contact</string>
    <string name="email">info@filtermusic.net</string>
    <string name="description">Filtermusic is updated (almost daily) with radio stations that stream in high quality (128Kbps)
        and play only music; you won\'t find a radio here where people having lenghty discussions
        (just in case these are the radio stations you are especially looking for, some can be found at the \"Various/Independent\" section).\n
        All streams presented have been filtered especially for electronic &amp; dance music from thousands of stations all over the Internet.</string>


    <!--player view-->
    <string name="no_radio_selected">Choose a radio station</string>
    <string name="unable_to_play">Unable to play radio</string>

    <!--hockey-->
    <!--crash reporting-->
    <string name="crashreporter_crashes_found_alertview_message">Please write a short description of the error and your contact details and we will fix it as soon as possible.</string>
    <string name="crashreporter_crashes_found_alertview_button_dont_send">Don´t send report</string>
    <string name="crashreporter_crashes_found_alertview_button_send">OK</string>
    <string name="crashreporter_crashes_found_alert_input_default_text">Contact:\
    What happended?\</string>
    <string name="crashreporter_crashes_found_alertview_title">A crash occured</string>

</resources>
